p2/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name : apponeservice
spec:
  selector:
      app : app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
     
---

apiVersion: v1
kind: Service
metadata:
  name : apptwoservice
spec:
  selector:
      app : app2
  ports:
    - protocol: TCP
      #port inside the cluster that other services/pods use to talk to your Service.
      port: 8081
      # the port available on the container 
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name : appthreeservice
spec:
  selector:
      app : app3
  ports:
    - protocol: TCP
      port: 8082 # what client connect to external
      targetPort: 8080 # what port available on the container
